[tool.poetry]
name = "pytoncenter"
version = "0.0.11"
description = ""
authors = ["alan890104 <alan890104@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tonpy = "^0.0.0.1.2b0"
aiohttp = "^3.9.1"
pynacl = "^1.5.0"
treelib = "^1.7.0"
pydantic = "^2.6.1"
pre-commit = "^3.6.1"
aiolimiter = "^1.1.0"
deprecated = "^1.2.14"
click = "^8.1.7"
pyfiglet = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
datamodel-code-generator = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pytoncenter = "pytoncenter.__main__:cli"

[tool.poetry_bumpversion.file."pytoncenter/__init__.py"]
